<resources>
    <string name="app_name">Rahim Akhter - ML</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">Hello:</string>
    <string name="image_url">Image URL</string>
    <string name="imageyouwi">Image you will load.</string>
    <string name="recognize">Extract\nText</string>
    <string name="generate_labels">Generate\nLabels</string>
    <string name="logout">logout</string>
    <string name="text">Text:</string>
    <string name="labels">Labels:</string>
    <string name="input_image">Select an image</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_prompt">Already Registered , Sign In !</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="type_your_email">Type your Email</string>
</resources>